--- a/課題①index.html
+++ b/課題①index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" href="課題①style.css">
 	<title>課題①</title>
 </head>
